# mlir-toy

./: '  .gitignore  .gitmodules  CMakeLists.txt  README.md  tablegen_compile_commands.yml
include/toy/: CMakeLists.txt
include/toy/ast/: CMakeLists.txt  ToyAST.h  ToyAST.td  ToyASTSet.h  ToyASTYaml.h  ToyExpr.h  ToyExpr.td  ToyStmt.h  ToyStmt.td
include/toy/context/: ToyContext.h
include/toy/mlir/Dialect/: CMakeLists.txt  ToyDialect.h  ToyDialect.td  ToyInterface.h  ToyInterface.td  ToyOp.h  ToyOp.td  ToyOpBase.td  ToyType.h  ToyType.td
include/toy/mlir/LLVMIR/: LLVMDumper.h
include/toy/mlir/MLIRGen/: IRGenerator.h  IRGeneratorDiagnostic.def
include/toy/mlir/Pass/: CMakeLists.txt  Passes.h  ShapeInference.h  ToyCombine.td
include/toy/parser/: Lexer.h  LexerDiagnostic.def  Parser.h  ParserDiagnostic.def  Token.h  TokenKind.def
include/toy/reporter/: DiagnosticReporter.h
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt  ToyASTSet.cpp  ToyExpr.cpp  ToyStmt.cpp
lib/context/: CMakeLists.txt  ToyContext.cpp
lib/driver/: CMakeLists.txt  toyc.cpp
lib/mlir/: CMakeLists.txt
lib/mlir/Dialect/: CMakeLists.txt  ToyDialect.cpp  ToyInterface.cpp  ToyOp.cpp  ToyType.cpp
lib/mlir/LLVMIR/: CMakeLists.txt  LLVMDumper.cpp
lib/mlir/MLIRGen/: CMakeLists.txt  IRGenerator.cpp
lib/mlir/Pass/: CMakeLists.txt  ShapeInference.cpp  ToLLVMLoweringPass.cpp  ToyCombine.cpp  ToyToAffineLoweringPass.cpp
lib/parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
scripts/: toy.dockerfile
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/LitTests/: CMakeLists.txt
test/LitTests/AST/MLIRGenTests/: affine-lowering.toy  affine-lowering3.toy  llvm-lowering2.toy  toy-simple-program1.toy  toy-simple-program2.toy  with-struct.toy
test/LitTests/AST/ParserTests/: parser-test1.toy  parser-test3.toy  parser-test5.toy  parser-test8.toy  parser-test9.toy
test/LitTests/MLIRGenTests/: llvm-lowering.toy
test/LitTests/ParserTests/: parser-test10.toy  parser-test2.toy  parser-test7.toy
test/MLIRGenTests/: CMakeLists.txt  MLIRGenTests.cpp  MLIRLoweringTests.cpp  MLIRPassTests.cpp  MLIRTestUtils.cpp  MLIRTestUtils.h  affine-lowering2.toy  affine-lowering4.toy  with-struct2.toy
test/MLIRPassTests/: canonicalizer-pass.toy  canonicalizer-pass2.toy  inliner-pass-with-struct.toy  inliner-pass.toy  shape-inference.mlir  shape-inference2.mlir  zero-rank-print.toy
test/ParserTests/: CMakeLists.txt  LexerTests.cpp  ParserTests.cpp  lexer-test1.toy  lexer-test2.toy  parser-test4.toy  parser-test6.toy
test/TestUtils/: TestExtras.h
tools/: CMakeLists.txt  toy-opt.cpp  toyc.cpp
